Fixing Java doc warnings